--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ export MONGO_URI="mongodb+srv://shabnamhaque20:THtvJLa2OJ1G5iuk@clustera.50buo.m
 export DB_NAME="chatapp"
 JWT_SECRET=shabnamsecret
 PORT=8080
+export MONGO_USERNAME="shabnamhaque20"
+export MONGO_PASSWORD="THtvJLa2OJ1G5iuk"
